--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-spring/web": "^9.7.1",
-    "@react-three/drei": "^9.56.28",
-    "@react-three/fiber": "^8.11.5",
-    "next": "13.2.4",
+    "@react-spring/web": "9.7.1",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "8.11.5",
+    "next": "^15.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "three": "^0.150.1"
+    "three": "0.150.1"
   },
   "devDependencies": {
     "@types/node": "18.15.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "autoprefixer": "^10.4.14",
+    "autoprefixer": "10.4.14",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
+    "postcss": "8.4.21",
+    "tailwindcss": "3.2.7",
     "typescript": "4.9.5"
   }
 }
