--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@react-spring/web": "9.7.1",
-    "@react-three/drei": "^9.122.0",
+    "@react-three/drei": "9.56.28",
     "@react-three/fiber": "8.11.5",
-    "next": "^15.2.4",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "three": "0.150.1"
